# pvr.vuplus

./: CMakeLists.txt  README.md
pvr.vuplus/resources/: settings.xml
pvr.vuplus/resources/language/resource.language.en_gb/: strings.po
src/: VuData.cpp  VuData.h  client.cpp  client.h
